==> apache/mynewt-core/hw/drivers/flash/stm32_qspi/src/stm32_qspi.c <==
#include <os/mynewt.h>
#include <os/link_tables.h>
#include <arm_mpu.h>
#include <bsp/bsp.h>
#include <string.h>
#include <assert.h>
#include <stdint.h>
#include <mcu/cmsis_nvic.h>
#include <hal/hal_flash_int.h>
#include <mcu/stm32_hal.h>
#include <stm32_common/mcu.h>
#define BUSY_MASK (1 << MYNEWT_VAL_STM32_QSPI_FLASH_BUSY_BIT)
#define WE_MASK   (1 << MYNEWT_VAL_STM32_QSPI_FLASH_WE_BIT)
#define QE_BIT    (MYNEWT_VAL_STM32_QSPI_FLASH_QE_BIT)
#define QE_MASK   (1 << (QE_BIT))
#define QSPI_READ     MYNEWT_VAL_STM32_QSPI_FLASH_READ_COMMAND
#define QSPI_ERASE64K MYNEWT_VAL_STM32_QSPI_FLASH_ERASE_64K_COMMAND
#define QSPI_ADDR_SIZE    MYNEWT_VAL_STM32_QSPI_FLASH_ADDRESS_LENGTH
#define QSPI_SECTOR_SIZE  MYNEWT_VAL_STM32_QSPI_FLASH_SECTOR_SIZE
#define QSPI_SECTOR_COUNT MYNEWT_VAL_STM32_QSPI_FLASH_SECTOR_COUNT
#define QSPI_BASE_ADDRESS MYNEWT_VAL_STM32_QSPI_FLASH_BASE_ADDRESS
#define QSPI_SIZE         ((QSPI_SECTOR_COUNT) * (QSPI_SECTOR_SIZE))
#define __UNUSED __attribute__((unused))
#define FLD(v, msk, pos) (((v) & (msk)) << (pos))
#define LMOD(ln, pos) FLD((ln == 4) ? 3 : (ln), 3, pos)
#define CMD(ins, cl, adl, altl, dl, ab, dmyc)                                 \
    (ins | LMOD(cl, 8) | LMOD(adl, 10) | LMOD(altl, 12) | LMOD(dl, 14) |      \
     FLD(ab, 0xFF, 16) | FLD(dmyc, 0x1F, 24))
#define CMD_NO_ARG(ins, cl)        CMD(ins, 1, 0, 0, 0, 0, 0)
#define CMD_WITH_DATA(ins, cl, dl) CMD(ins, cl, 0, 0, dl, 0, 0)
#define CMD_WITH_ADDR(ins, cl, al) CMD(ins, cl, al, 0, 0, 0, 0)

static int
stm32_qspi_read(const struct hal_flash *dev, uint32_t address, void *dst,
                uint32_t num_bytes)
{
    struct stm32_qspi_dev *qspi = (struct stm32_qspi_dev *)dev;

    stm32_qspi_lock(qspi);

    stm32_qspi_wait_for_ready(qspi);

    if (address >= dev->hf_base_addr && address + num_bytes <= qspi->limit) {
        if (qspi->data->memory_mapped) {
            memcpy(dst, (void *)address, num_bytes);
        } else {
            QSPI_CommandTypeDef cmd = COMMAND_DATA(QSPI_READ, num_bytes);

            cmd.Address = address - dev->hf_base_addr;

            stm32_qspi_command_with_data_in(qspi, &cmd, dst);
        }
    }

    stm32_qspi_unlock(qspi);

    return 0;
}

static int
stm32_qspi_write(const struct hal_flash *dev, uint32_t address,
                 const void *src, uint32_t num_bytes)
{
    struct stm32_qspi_dev *qspi = (struct stm32_qspi_dev *)dev;
    QSPI_CommandTypeDef cmd = COMMAND(CMD_02h);
    int rc = HAL_OK;
    uint32_t write_limit;
    uint32_t page_limit;
    uint32_t chunk;
    uint32_t flash_address;
    uint32_t left = num_bytes;
    int sr = 0;

    if (address < dev->hf_base_addr || address >= qspi->limit) {
        return OS_INVALID_PARM;
    }

    stm32_qspi_lock(qspi);

    flash_address = address - dev->hf_base_addr;
    write_limit = flash_address + left;

    /*
     * For memory mapped device, first disable interrupts so no code will try
     * to access region that is not accessible for a while.
     */
    if (qspi->data->memory_mapped) {
        OS_ENTER_CRITICAL(sr);
        HAL_QSPI_Abort(&qspi->data->hqspi);
    }

    while (rc == HAL_OK && left != 0) {
        page_limit = (flash_address | 0xFF) + 1;
        chunk = min(page_limit, write_limit) - flash_address;

        stm32_qspi_wait_for_ready(qspi);

        stm32_qspi_write_enable(qspi);

        cmd.Address = flash_address;
        cmd.NbData = chunk;

        rc = stm32_qspi_command_with_data_out(qspi, &cmd, src);

        qspi->data->ready = false;

        flash_address += chunk;
        src += chunk;
        left -= chunk;
    }

    /* Restore memory mapped mode if was enabled */
    if (qspi->data->memory_mapped) {
        stm32_qspi_wait_for_ready(qspi);
#if MYNEWT_VAL_STM32_ENABLE_DCACHE
        SCB_InvalidateDCache_by_Addr((void *)address, num_bytes);
#endif
        stm32_qspi_memory_map(qspi);
        OS_EXIT_CRITICAL(sr);
    }

    stm32_qspi_unlock(qspi);

    return rc;
}

static int
stm32_qspi_erase_sector(const struct hal_flash *dev, uint32_t sector_address)
{
    struct stm32_qspi_dev *qspi = (struct stm32_qspi_dev *)dev;

    return stm32_qspi_erase_cmd(qspi, CMD_20h, sector_address, QSPI_SECTOR_SIZE);
}

static int
stm32_qspi_erase(const struct hal_flash *dev, uint32_t address, uint32_t size)
{
    struct stm32_qspi_dev *qspi = (struct stm32_qspi_dev *)dev;
    uint32_t end;

    address &= ~0xFFFU;
    end = address + size;

    if (address == qspi->hal_flash.hf_base_addr && end == qspi->limit) {
        return stm32_qspi_chip_erase(qspi);
    }
    address -= qspi->hal_flash.hf_base_addr;

    while (size) {
        if ((address & 0xFFFFU) == 0 && (size >= 0x10000) && QSPI_ERASE64K != 0) {
            /* 64 KB erase if possible */
            stm32_qspi_erase_cmd(qspi, QSPI_ERASE64K, address, 0x10000);
            address += 0x10000;
            size -= 0x10000;
        } else {
            stm32_qspi_erase_cmd(qspi, CMD_20h, address, QSPI_SECTOR_SIZE);
            address += 0x1000;
            if (size > 0x1000) {
                size -= 0x1000;
            } else {
                size = 0;
            }
        }
    }

    return 0;
}

static int
stm32_qspi_sector_info(const struct hal_flash *dev, int idx, uint32_t *address,
                       uint32_t *sz)
{
    *address = dev->hf_base_addr + idx * QSPI_SECTOR_SIZE;
    *sz = QSPI_SECTOR_SIZE;

    return 0;
}

static int
stm32_qspi_init(const struct hal_flash *dev)
{
    uint8_t buf[32];
    struct stm32_qspi_dev *qspi = (struct stm32_qspi_dev *)dev;
    QSPI_HandleTypeDef *hqspi = &qspi->data->hqspi;
    uint32_t ratio = (HAL_RCC_GetHCLKFreq() + MYNEWT_VAL_STM32_QSPI_FLASH_FREQ - 1) /
                     MYNEWT_VAL_STM32_QSPI_FLASH_FREQ;

    qspi->data->hqspi.Init.ClockPrescaler = ratio > 0 ? ratio - 1 : 0;

    __HAL_RCC_QSPI_CLK_ENABLE();
    __HAL_RCC_QSPI_FORCE_RESET();
    __HAL_RCC_QSPI_RELEASE_RESET();
    hal_gpio_init_fun(MYNEWT_VAL_STM32_QSPI_FLASH_PIN_CS);
    hal_gpio_init_fun(MYNEWT_VAL_STM32_QSPI_FLASH_PIN_SCK);
    hal_gpio_init_fun(MYNEWT_VAL_STM32_QSPI_FLASH_PIN_DIO0);
    hal_gpio_init_fun(MYNEWT_VAL_STM32_QSPI_FLASH_PIN_DIO1);
    hal_gpio_init_fun(MYNEWT_VAL_STM32_QSPI_FLASH_PIN_DIO2);
    hal_gpio_init_fun(MYNEWT_VAL_STM32_QSPI_FLASH_PIN_DIO3);
    HAL_QSPI_Init(hqspi);

    stm32_qspi_read_jedec_id(qspi, buf);
    /* Enable QUAD SPI mode in flash if we are going to use CMD_EBh */
    if (QSPI_READ == CMD_EBh) {
        stm32_qspi_quad_enable(qspi);
    }

    if (MYNEWT_VAL_STM32_QSPI_FLASH_MEMORY_MAPPED) {
        stm32_qspi_memory_map(qspi);
    }

    return 0;
}
